Fix project img responsiveness on smaller screens, increase width to 100%. Add in content for Student Roster and Coffee Machine Simulator projects.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1789,10 +1789,10 @@ input[type="radio"] + label:before {
 .image.right {
   max-width: 50%;
   filter: drop-shadow(0.25em 0.3em 0.4em rgba(91, 117, 172, 0.507));
-  -moz-transition: -moz-transform .3s;
-  -webkit-transition: -webkit-transform .3s;
-  -ms-transition: -ms-transform .3s;
-  transition: transform .3s;
+  -moz-transition: -moz-transform 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  -ms-transition: -ms-transform 0.3s;
+  transition: transform 0.3s;
 }
 .image.left:hover,
 .image.right:hover {
@@ -1847,7 +1847,7 @@ a.image:hover img {
   -moz-transform: scale(1.075);
   -webkit-transform: scale(1.075);
   -ms-transform: scale(1.075);
-  transform: scale(1.0);
+  transform: scale(1);
   cursor: default;
 }
 
@@ -2931,6 +2931,10 @@ button:disabled,
     position: absolute;
     right: -0.5em;
     top: 0;
+  }
+  .image.left,
+  .image.right {
+    max-width: 100%;
   }
 }
 
